save decision weighted scores with supabse setup

--- a/compose/docker-compose.yml
+++ b/compose/docker-compose.yml
@@ -42,8 +42,8 @@ services:
     image: shopify/toxiproxy:latest
     container_name: zta_toxiproxy
     ports:
-      - "8474:8474" # admin API
-      - "8666:8666" # example proxy port
+      - "8474:8474"   # admin API
+      - "8666:8666"   # example proxy port
     networks:
       - zta_net
 
@@ -51,8 +51,11 @@ services:
     build: ../services/validation
     container_name: zta_validation
     environment:
-      - DB_DSN=${DB_DSN}
-      - ES_URL=http://elastic:${ELASTIC_PASSWORD}@elasticsearch:9200
+      DB_DSN: postgresql+psycopg://postgres.ntaujhnmqblzieifvzor:MoneyInTheBank@aws-1-us-east-1.pooler.supabase.com:6543/postgres?sslmode=require
+      ES_URL: http://elastic:${ELASTIC_PASSWORD}@elasticsearch:9200
+    dns:
+      - 8.8.8.8
+      - 1.1.1.1
     ports:
       - "8001:8000"
     depends_on:
@@ -64,8 +67,11 @@ services:
     build: ../services/trust
     container_name: zta_trust
     environment:
-      - DB_DSN=${DB_DSN}
-      - ES_URL=http://elastic:${ELASTIC_PASSWORD}@elasticsearch:9200
+      DB_DSN: postgresql+psycopg://postgres.ntaujhnmqblzieifvzor:MoneyInTheBank@aws-1-us-east-1.pooler.supabase.com:6543/postgres?sslmode=require
+      ES_URL: http://elastic:${ELASTIC_PASSWORD}@elasticsearch:9200
+    dns:
+      - 8.8.8.8
+      - 1.1.1.1
     ports:
       - "8002:8000"
     depends_on:
@@ -78,7 +84,7 @@ services:
     build: ../services/gateway
     container_name: zta_gateway
     environment:
-      - TRUST_URL=http://trust:8000
+      TRUST_URL: http://trust:8000
     ports:
       - "8003:8000"
     depends_on:
