--- a/compose/docker-compose.yml
+++ b/compose/docker-compose.yml
@@ -89,6 +89,8 @@ services:
           path: ../services/validation/requirements.txt
         - action: rebuild
           path: ../services/validation/Dockerfile
+    volumes:
+      - ../data:/data:ro
 
   trust:
     build: ../services/trust
@@ -240,3 +242,27 @@ services:
           path: ../services/siem/requirements.txt
         - action: rebuild
           path: ../services/siem/Dockerfile
+
+  simulator:
+    build:
+      context: ..                       # repo root
+      dockerfile: scripts/simulator/Dockerfile
+    container_name: zta_simulator
+    working_dir: /app
+    volumes:
+      - ../data:/app/data:ro            # makes your local data/ visible at /app/data
+    environment:
+      DATA_DIR: /app/data
+      CICIDS_DIR: /app/data/cicids
+      WIFI_CSV: /app/data/wifi/wigle_sample.csv
+      DEVICE_CSV: /app/data/device_posture/device_posture.csv
+      TLS_CSV: /app/data/tls/ja3_fingerprints.csv
+      VALIDATE_URL: http://validation:8000/validate
+      GATEWAY_URL:  http://gateway:8000/decision
+      SIM_SLEEP: "0.8"
+      SIM_MAX_ROWS: "150"
+    depends_on:
+      - validation
+      - gateway
+    networks:
+      - zta_net
